# PhotoSynth

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  settings.yaml
photosynth/: celery_app.py  db.py  metadata.py  nas_watcher.py  tasks.py  vocabulary.json
photosynth/pipeline/: captioner.py  detector.py
photosynth/ui/: backend.py  index.html
photosynth/utils/: faiss_manager.py  hashing.py  paths.py
scripts/: cluster_faces.py  debug.py  download_models.py  download_vocab.py  generate_thumbnails.py  migrate_db.py  repair_db.py  reset_db.py  scan_faces.py  setup_power_schedule.sh  setup_services_3090.sh  test_pipeline.py
