[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PhotoSynth"
version = "0.1.0"
description = "Distributed pipeline for NAS photo tagging."
readme = "README.md"
authors = [
    { name = "Aditya Das", email = "aditya.das8.ad@gmail.com" }
]
license = "Apache-2.0"
requires-python = ">=3.11, <3.12"

dependencies = [
    # --- Core Infrastructure ---
    "celery[redis]>=5.5.0",
    "redis>=5.2.0",
    "pydantic>=2.10.0",
    "PyYAML>=6.0.0",
    "watchdog>=6.0.0",
    "python-dotenv>=1.0.0",
    "huggingface_hub>=0.26.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",

    # --- Image & File Handling ---
    "Pillow>=11.0.0",
    "numpy<2.0.0",
    "opencv-python>=4.10.0",
    "pyexiftool>=0.5.0",
    "imagehash>=4.3.1",

    # --- Machine Learning Frameworks ---
    # Unpinned is safer for 5090 so it can grab Nightly if needed
    "torch>=2.5.0",
    "torchvision>=0.20.0",

    # --- Transformers & VLMs ---
    "transformers>=4.46.0",
    "accelerate>=1.0.0",
    "bitsandbytes>=0.44.0 ; sys_platform == 'linux'",
    
    # --- Required for Florence-2 ---
    "einops>=0.8.0",
    "timm>=1.0.0",
    # REMOVED: "flash-attn" (Incompatible with CUDA 13)

    # --- Model Specifics ---
    "paddlepaddle-gpu==2.6.1 ; sys_platform == 'linux'",
    "paddleocr>=2.9.0",

    # --- Face Analysis ---
    "insightface>=0.7.3",
    "onnxruntime-gpu>=1.19.0 ; sys_platform == 'linux'",

    # Qwen2-VL Specifics
    "qwen-vl-utils>=0.0.4",
]

[tool.setuptools]
packages = ["photosynth"]

# REMOVED: [tool.uv.extra-build-dependencies] section